# stories

./: .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: conf.py  index.rst  loss.rst  model.rst  potentials.rst  steps.rst  tools.rst
docs/vignettes/: Axolotl brain regeneration.ipynb  Mouse gliogenesis.ipynb  demo_axolotl.ipynb  demo_midbrain.ipynb
stories/: __init__.py  loss.py  potentials.py  scores.py  spacetime.py  tools.py
stories/steps/: __init__.py  explicit.py  icnn_implicit.py  monge_implicit.py  proximal_step.py
tests/: test_main.py
